<resources>
    <string name="app_name">Playlist maker</string>
    <string name="text_search">Поиск</string>
    <string name="text_library">Медиатека</string>
    <string name="text_settings">Настройки</string>
    <string name="text_share">Поделиться приложением</string>
    <string name="text_support">Написать в поддержку</string>
    <string name="text_documents">Пользовательское соглашение</string>
    <string name="dark_theme">Темная тема</string>
    <string name="message_share_text">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_address">gamerd123@yandex.ru</string>
    <string name="email_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="text_search_edittext">Поиск</string>
    <string name="music_icon_description">Icon</string>
    <string name="search_not_found">Ничего не нашлось</string>
    <string name="problems_with_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_search">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_playTime">00:00</string>
    <string name="featured_tracks_empty">Ваша медиатека пуста</string>
    <string name="playlist_empty">Вы не создали           ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="media_library">Медиатека</string>
    <string name="featured_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create_playlist">Создать</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="finish_creating_playlist_title">Завершить создание плейлиста?</string>
    <string name="finish_creating_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="add_to_playlist_title">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %s</string>

    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="playlist_no_tracks">В этом плейлисте пока нет треков</string>
    <string name="delete_track_dialog_message">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_edit_info">Редактировать информацию</string>
    <string name="menu_delete_playlist">Удалить плейлист</string>
    <string name="share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete">Удалить</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
</resources>