<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_settings"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/panel_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:visibility="visible"
        android:fontFamily="@font/ys_display_regular"
        app:navigationIcon="@drawable/back"
        app:title="@string/text_settings"
        app:titleTextAppearance="@style/HeaderTitleStyle"
        app:titleTextColor="@color/text_color_header_settings" />


    <androidx.appcompat.widget.SwitchCompat
        style="@style/DarkThemeSwitchStyle"
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"/>

    <Button
        android:id="@+id/button_search"
        style="@style/SettingsScreenButton"
        android:text="@string/text_share"
        app:icon="@drawable/share"/>

    <Button
        android:id="@+id/button_library"
        style="@style/SettingsScreenButton"
        android:text="@string/text_support"
        app:icon="@drawable/support" />

    <Button
        android:id="@+id/button_settings"
        style="@style/SettingsScreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_documents"
        app:icon="@drawable/documents"/>

</LinearLayout>