<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/background">

    <FrameLayout
        android:id="@+id/panel_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:visibility="visible">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/text_color_header"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/text_search"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/icon_color"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"/>

        <Button
            android:id="@+id/button_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/text_library"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/icon_color"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"/>

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/text_settings"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/icon_color"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"/>

    </LinearLayout>
</LinearLayout>