<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:navigationIcon="@drawable/ic_back_16"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/HeaderTitleStyle"
        app:titleTextColor="@color/item_track_header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/select_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="312dp"
            android:layout_height="312dp"
            android:background="@drawable/rounded_rectangle"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/coverImage2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="104dp"
            android:background="@drawable/bg_cover_placeholder_100"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/DarkThemeSwitchColor2"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/DarkThemeSwitchColor2"
        app:layout_constraintTop_toBottomOf="@+id/select_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/playlist_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/DarkThemeSwitchColor2"
            android:textSize="16sp"
            app:cornerRadius="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/DarkThemeSwitchColor2"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/DarkThemeSwitchColor2"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/playlist_description_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/DarkThemeSwitchColor2"
            android:textSize="16sp"
            app:cornerRadius="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/item_track_info_play"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:paddingHorizontal="14dp"
        android:paddingVertical="10dp"
        android:text="@string/create_playlist"
        android:textAllCaps="false"
        android:textColor="@color/text_color_header"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
